@@ -66,6 +66,7 @@ static struct option long_options[] = {
    {"monitor", required_argument, 0, 'm'},
    {"bubble-at", required_argument, 0, 'b'},
    {"at", required_argument, 0, 'a'},
+   {"config", required_argument, 0, 'o'},
    {"debug", no_argument, &debug, 1},
    {0, 0, 0, 0}
 };
@@ -103,6 +104,7 @@ static void usage()
       "     --monitor=N\t%s\n"
       "     --at=X,Y\t\t%s\n"
       "     --bubble-at=X,Y\t%s\n"
+      "     --config=FILE\t%s\n"
       "     --debug\t\t%s\n\n"
       "%s\n\n"
       "%s\n\n"
@@ -123,6 +125,7 @@ static void usage()
       i18n("Display cow on monitor N."),
       i18n("Force the cow to appear at screen location (X,Y)."),
       i18n("Change relative position of bubble."),
+      i18n("Specify alternative config file."),
       i18n("Keep daemon attached to terminal."),
       i18n("Default values for these options can be specified in the "
          "xcowsay config\nfile.  See the man page for more information."),
@@ -230,6 +233,7 @@ int main(int argc, char **argv)
    add_int_option("at_y", -1);
    add_int_option("bubble_x", DEF_BUBBLE_X);
    add_int_option("bubble_y", 0);
+   add_string_option("alt_config_file", "");
    
    parse_config_file();
    
@@ -283,6 +287,10 @@ int main(int argc, char **argv)
             set_int_option("bubble_x", x);
             set_int_option("bubble_y", y);
          }
+         break;
+      case 'o':
+         set_string_option("alt_config_file", optarg);
+         parse_config_file();
          break;
       case '?':
          // getopt_long already printed an error message
