@@ -53,6 +53,11 @@ can be stored in the XDG compliant location
 .IR $HOME/.config/xcowsayrc )
 or in your home directory at
 .IR $HOME/.xcowsayrc .
+If the 
+.BI --config= FILE
+command line option is passed 
+.I FILE
+will be processed after your personal configuration file.
 
 The configuration file consists of 'option = value' pairs, one per line.  The
 valid keys are given in the next section. For example, the following line sets
